--- a/src/assets/blocks/box.scss
+++ b/src/assets/blocks/box.scss
@@ -32,6 +32,7 @@
     border-radius: 4px ;
     // box-shadow: 2px 2px 1px #000, -2px -2px 1px #000;
     box-shadow: 2px 2px 2px #cfcfcf, -2px -2px 2px #e5e5e5;
+    
 }
 
 .lesson{
@@ -73,10 +74,39 @@
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 20;
-    background: #fff;
+    // background: $done-color;
+    background-color: #fff;
+
+}
+.checkDone{
+    background-color: $done-color;
+    color: $dark-blue;
+    &.description{
+        background-color: #fff;
+    }
 }
 
-
+.red{
+    background-color: var(--bs-red);
+}
+.yellow{
+    background-color: var(--bs-yellow);
+}
+.orange{
+    background-color: var(--bs-orange);
+}
+.green{
+    background-color: var(--bs-teal);
+}
+.blueLigth{
+    background-color: var(--bs-cyan);
+}
+.blue{
+    background-color: #60a0ff;
+}
+.purple{
+    background-color: #9e6dfa;
+}
 
 
 
@@ -85,13 +115,13 @@
         transform: rotate(0deg);
     }
     25%{
-        transform: rotate(-3deg);
+        transform: rotate(-2deg);
     }
     50%{
         transform: rotate(0deg);
     }
     75%{
-        transform: rotate(3deg);
+        transform: rotate(2deg);
     }
     100%{
         transform: rotate(0deg);
