--- a/src/assets/blocks/form.scss
+++ b/src/assets/blocks/form.scss
@@ -27,11 +27,6 @@
         // color: var(--bs-yellow);
         cursor: pointer;
         font-size: 22px;
-        i{
-            &::before{
-               
-            }
-        }
     }
     &-remove{
         height: 3px;
@@ -42,11 +37,29 @@
         right: 15px;
         cursor: pointer;
     }
+    &-replace{
+        
+    }
 }
-.checkDone{
-    background-color: $done-color;
-    color: $dark-blue;
+.arrows{
+    &-move{
+        display: flex;
+        position: absolute;
+        bottom: 0;
+        font-size: 25px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        justify-content: space-around;
+        cursor: pointer;
+        i{
+            &:before{
+                color: $dark-blue;
+            }
+        }
+    }
 }
+
 .card{
     &-body{
     top: 50%;
@@ -93,4 +106,14 @@
             color:aqua;
         }
     }
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
