--- a/src/assets/blocks/table.scss
+++ b/src/assets/blocks/table.scss
@@ -2,7 +2,7 @@
     &-days{
         display: block;
         overflow: auto;
-        color: #2c3e50;
+        // color: #2c3e50;
         width: 150px;
         border:1px solid #000
         
