--- a/src/assets/blocks/box.scss
+++ b/src/assets/blocks/box.scss
@@ -19,7 +19,7 @@
         position: absolute;
         top: 25px;
         font-size: 24px;
-        color: var(--bs-purple);
+        color: var(#2a1059);
         cursor: pointer;
     }
 }
@@ -87,25 +87,25 @@
 }
 
 .red{
-    background-color: var(--bs-red);
+    background-color: #ff8d98;
 }
 .yellow{
-    background-color: var(--bs-yellow);
+    background-color: #ffe28b;
 }
 .orange{
-    background-color: var(--bs-orange);
+    background-color: #fdae6d;
 }
 .green{
-    background-color: var(--bs-teal);
+    background-color: #62edc4;
 }
 .blueLigth{
-    background-color: var(--bs-cyan);
+    background-color: #94edff;
 }
 .blue{
-    background-color: #60a0ff;
+    background-color: #97bef8;
 }
 .purple{
-    background-color: #9e6dfa;
+    background-color: #bfa7ed;
 }
 
 
