--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -8,6 +8,7 @@
 @import '@/assets/blocks/week.scss';
 @import '@/assets/blocks/buttons.scss';
 @import '@/assets/blocks/modal.scss';
+@import '@/assets/blocks/header.scss';
 
 
 
