--- a/src/assets/blocks/box.scss
+++ b/src/assets/blocks/box.scss
@@ -1,5 +1,5 @@
 .wrapper{
-    padding: 0px 3px 100px 3px;
+    padding: 60px 3px 100px 3px;
     &-select{
         position: relative;
         select{
@@ -15,24 +15,62 @@
     }
 }
 .lessons{
+    &-toggle{
+        position: relative;
+        width: 30px;
+        height: 10px;
+        background-color: transparent;
+        border-radius: 6px;
+        &_btn{
+            width: 25px;
+            height: 25px;
+            // background: #ffe28b;
+            // border-radius: 100%;
+            position: absolute;
+            left: -3px;
+            top: -9px;
+            transition: 0.5s all;
+        }
+    }
     &-edit{
-        position: absolute;
-        top: 25px;
-        font-size: 24px;
-        color: var(#2a1059);
+        // position: absolute;
+        // top: 25px;
+        // background-color: #ffe28b;
+        border-radius: 100%;
+        font-size: 17px;
+        color: #2a1059;
         cursor: pointer;
+        transition: 0.5s all;
     }
 }
+.toggleActive{
+    border: 1px solid #2a1059;
+    transition: 0.5s all;
+    background-color: #97bef8;
+}
+.editActive{
+    left: 10px;
+    background-color: #97bef8;
+    border-radius: 100%;
+    border: 0.5px solid #000;
+    transition: 0.5s all;
+
+}
+
+
 .box-item{
     border: 1px solid #000;
     padding: 25px 5px 5px;
+    width: 150px;
     height: 150px;
     position: relative;
     margin-top: 15px;
     border-radius: 4px ;
     // box-shadow: 2px 2px 1px #000, -2px -2px 1px #000;
     box-shadow: 2px 2px 2px #cfcfcf, -2px -2px 2px #e5e5e5;
-    
+    &:nth-child(1){
+        margin-top: 20px;
+    }
 }
 
 .lesson{
@@ -98,7 +136,7 @@
 .green{
     background-color: #62edc4;
 }
-.blueLigth{
+.blueLight{
     background-color: #94edff;
 }
 .blue{
