--- a/src/assets/blocks/buttons.scss
+++ b/src/assets/blocks/buttons.scss
@@ -8,3 +8,36 @@
         }
     }
 }
+.btn-done{
+    background-color: transparent;
+    border: none;
+    i{
+        font-size: 25px;
+        ::before{
+            color:aqua;
+        }
+    }
+}
+.bi-arrow-left{
+    &:active{
+        font-size: 20px;
+    }
+}
+.btn-change-day{
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    width: 30px;
+    // height: 30px;
+    i{
+        // width: 100%;
+        height: 30px;
+        border-radius: 3px;
+        cursor: pointer;
+        border: 0.5px solid $dark-blue;
+        &::before{
+            width: 100%;
+            // height: 30px;
+        }
+    }
+}
