--- a/src/assets/blocks/form.scss
+++ b/src/assets/blocks/form.scss
@@ -1,4 +1,7 @@
 .form{
+    &-wrapper{
+        // position: fixed;
+    }
     &-check{
         position: absolute;
         bottom: 5px;
@@ -41,6 +44,14 @@
         
     }
 }
+
+.form-change-day{
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+    
+}
+
 .arrows{
     &-move{
         display: flex;
@@ -61,6 +72,7 @@
 }
 
 .card{
+    position: fixed;
     &-body{
     top: 50%;
     left: 50%;
@@ -97,16 +109,7 @@
     }
     
 }
-.btn-done{
-    background-color: transparent;
-    border: none;
-    i{
-        font-size: 25px;
-        ::before{
-            color:aqua;
-        }
-    }
-}
+
 
 .fade-enter-active,
 .fade-leave-active {
