--- a/src/assets/blocks/header.scss
+++ b/src/assets/blocks/header.scss
@@ -31,5 +31,6 @@
     bottom: 0;
     border-radius:  4px 4px 4px 4px;
     background-color: $done-color;
+    transition: 0.5s all;
     // z-index: 10;
 }
