--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -9,6 +9,8 @@
 @import '@/assets/blocks/buttons.scss';
 @import '@/assets/blocks/modal.scss';
 @import '@/assets/blocks/header.scss';
+@import '@/assets/blocks/container.scss';
+
 
 
 
