--- a/src/assets/blocks/box.scss
+++ b/src/assets/blocks/box.scss
@@ -123,7 +123,7 @@
     background-color: $done-color;
     color: $dark-blue;
     &.description{
-        background-color: #fff;
+        // background-color: #fff;
     }
 }
 
