change time add

--- a/src/assets/blocks/box.scss
+++ b/src/assets/blocks/box.scss
@@ -1,5 +1,5 @@
 .wrapper{
-    padding: 60px 3px 100px 3px;
+    padding: 61px 3px 100px 80px;  /*  was     padding: 61px 3px 100px 0px; */
     &-select{
         position: relative;
         select{
