--- a/src/assets/blocks/buttons.scss
+++ b/src/assets/blocks/buttons.scss
@@ -3,6 +3,7 @@
         // background-color: #53687E;
         width: 24px;
         font-size: 24px;
+        cursor: pointer;
     }
 }
 .btn-done{
