--- a/src/assets/blocks/form.scss
+++ b/src/assets/blocks/form.scss
@@ -43,6 +43,12 @@
     &-replace{
         
     }
+    &-time{
+        &-change{
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
 
 .form-change-day{
@@ -74,25 +80,25 @@
 .card{
     position: fixed;
     &-body{
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-95%, -231%);
-    form{
-        width: 250px;
-        display: flex;
-        flex-direction: column;
+        top: 30%;
+        left: 50%;
         position: absolute;
-        row-gap: 10px;
-        background:var(--bs-gray-200);
-        padding: 15px;
-        // left: 50%;
-        // transform: translateX(-50%);
-        input{
-            border-radius: 6px;
-            padding-left: 5px;
+        transform: translate(-95%, -231%);
+        form{
+            width: 250px;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            row-gap: 10px;
+            background:var(--bs-gray-200);
+            padding: 15px;
+            // left: 50%;
+            // transform: translateX(-50%);
+            input{
+                border-radius: 6px;
+                padding-left: 5px;
+            }
         }
-    }
     }
     &-title{
         color: var(--bs-gray-100);
@@ -102,7 +108,6 @@
     position: absolute;
     top: -35px;
     right: 0;
-    background-color: #fff;
     &.descr{
         top: 10px;
         right: 10px;
